# bodil.github.com

./: .babelrc  .eleventy.js  .eleventyignore  .eslintrc  .gitignore  .postcssrc.json  .travis.yml  CNAME  Cargo.toml  Dockerfile  Procfile  README.md  _config.yml  _gutenberg_old_style.css  _iosevka.css  _prism-night-owl.css  atom.njk  config.toml  contact.md  fallout_equestria.epub  fallout_equestria.mobi  heroku.yml  index.html  package-lock.json  package.json  pnpm-lock.yaml  print.css  release-tasks.sh  site.css  tsconfig.json  webpack.config.js
.github/workflows/: deploy.yml
_data/: config.json
_includes/: index.liquid  post.liquid
_layouts/: default.html  post.html
_posts/: 2012-09-09-test-post.md
_static/: browserconfig.xml  manifest.json  theme.js
app/: index.html  keybase.txt
articles/: atom.xml  index.html
chart/: chart.coffee  index.html  style.css
coffeescript/: index.html
coffeescript/css/: default.css  moon.css  sand.css  sea_wave.css
coffeescript/js/: prettify.js  utils.js
coffeescript/media/: node_js.xcf  the_secret.xcf
content/: _index.md  contact.md
content/parser-combinators/: index.md
content/skyrim/: index.md
content/vgtk/: index.md
j/: app.coffee  ender.js  ender.min.js  mjs.js
m/: screen.css
ohai/: index.html
parser-combinators/: index.md
prez/: index.html
prez/coffeescript/: index.html
sass/: _iosevka.scss  _mu.scss  print.scss  site.scss
server/: index.ts
src/: index.js  main.rs  screen.css
static/: oauth.html
templates/: anchor-link.html  content.html  index.html  page.html
vgtk/: index.md
(+48 files in other folders)
