[package]
name = "bodil-dot-lol"
version = "0.1.0"
edition = "2018"
authors = ["Bodil Stokke <bodil@bodil.org>"]

[dependencies]
hyper = { version = "0.14", features = ["full"] }
log = "0.4"
env_logger = "0.8"
dotenv = "0.15"
hyper-staticfile = "0.6"
tokio = { version = "1", features = ["full"] }
url = "2"
rand = "0.8"
